--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" type="image/x-icon" href="/images/fevicon.jpg">
+    <link rel="icon" type="image/x-icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTx2omzBLOAXaoMkzVgriOqDV2GOJys-KFmAQ&usqp=CAU">
 </head>
 
 <body>
@@ -27,10 +27,10 @@
 
                 <div>Shop</div>
                 <div>AI</div>
-                <div>Mobile</div>
-                <div>TV & Audio</div>
-                <div>Appliances</div>
-                <div>Computing</div>
+                <div><a href="mobile.html">Mobile</a></div>
+                <div><a href="TVandAV.html">TV</a></div>
+                <div><a href="homeAp.html">Appliances</a></div>
+                <div><a href="laptop.html">Computing</a></div>
                 <div>Display</div>
                 <div>Accessories</div>
                 <div>SmartThings</div>
@@ -42,8 +42,8 @@
             </div>
             <div class="icon">
                 <div><i class="fa-solid fa-magnifying-glass"></i></div>
-                <div><i class="fa-solid fa-cart-shopping"></i></div>
-                <div><i class="fa-regular fa-user"></i></div>
+                <div><a href="signup.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
+                <div><a href="signup.html"><i class="fa-regular fa-user"></i></a></div>
             </div>
         </div>
     </header>
